# jupiter-perpetuals-cpi

./: Cargo.toml
idl/: perpetuals.json
src/: lib.rs
