[package]
name = "jupiter-perpetuals-cpi"
version = "0.1.0"
edition = "2021"
description = "Jupiter Perpetuals CPI"
authors = ["Vladislav Vasilev <vfaust.thefuture@gmail.com>"]
repository = "https://github.com/structured-org/jupiter-perpetuals-cpi.git"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = ">=0.4.0"
anchor-lang = ">=0.31.0"